--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -7,6 +7,11 @@ sql.driverClassName = com.mysql.jdbc.Driver
 sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull
 sql.username = sysdba
 sql.password = Bccd@2017
+
+#sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull
+#sql.username = root
+#sql.password = rootadmin
+
 # \u521d\u59cb\u5927\u5c0f\u3001\u6700\u5c0f\u751f\u5b58\u3001\u6700\u5927\u6fc0\u6d3b\u6570\u91cf
 sql.initialSize = 10
 sql.minIdle = 10
@@ -39,4 +44,4 @@ mongo.socketTimeout = 1500
 mongo.slaveOk = true
 mongo.writeNumber = 1
 mongo.writeTimeout = 0
-mongo.writeFsync = true
+mongo.writeFsync =true
