--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -38,8 +38,10 @@ sql.testOnBorrow = false
 sql.testOnReturn = false
 
 # ----------------- MongoDB -----------------
-mongo.replicaSet = 127.0.0.1:27017
-mongo.dbName = test
+mongo.replicaSet = 120.76.221.250:27017
+mongo.dbName = pmph
+mongo.username = admin
+mongo.password = What's#our00psW@admin
 # \u4e3b\u673a\u7684\u8fde\u63a5\u6c60\u5927\u5c0f
 mongo.connectionsPerHost = 8
 mongo.threadsAllowedToBlockForConnectionMultiplier = 4
