--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -6,10 +6,10 @@
 # ----------------- MySQL -----------------
 # \u8fde\u63a5\u5c5e\u6027
 sql.driverClassName = com.mysql.jdbc.Driver
-sql.url = jdbc\:mysql\://120.76.221.250\:3306/pmph_imesp_db?zeroDateTimeBehavior\=convertToNull
+sql.url = jdbc\:mysql\://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior\=convertToNull
 zeroDateTimeBehavior=convertToNull
-sql.username = sysdba
-sql.password = Bccd@2017
+sql.username = root
+sql.password = root
 
 
 #sql.driverClassName = com.mysql.jdbc.Driver
