--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -14,10 +14,10 @@ sql.password = Bccd@2017
 
 #sql.driverClassName = com.mysql.jdbc.Driver
 #sql.url = jdbc\:mysql\://127.0.0.1\:3306/pmph_imesp_db?zeroDateTimeBehavior\=convertToNull
-
+#
 #zeroDateTimeBehavior=convertToNull
 #sql.username = root
-#sql.password = rootadmin
+#sql.password = Zeng1314
 
 
 # \u521d\u59cb\u5927\u5c0f\u3001\u6700\u5c0f\u751f\u5b58\u3001\u6700\u5927\u6fc0\u6d3b\u6570\u91cf
