通过消息服务单元测试

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
+            <version>${javaee-web-api.ver}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
