--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -6,19 +6,9 @@
 # ----------------- MySQL -----------------
 # \u8fde\u63a5\u5c5e\u6027
 sql.driverClassName = com.mysql.jdbc.Driver
-sql.url = jdbc\:mysql\://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior\=convertToNull
-zeroDateTimeBehavior=convertToNull
-sql.username = root
-sql.password = root
-
-
-#sql.driverClassName = com.mysql.jdbc.Driver
-#sql.url = jdbc\:mysql\://127.0.0.1\:3306/pmph_imesp_db?zeroDateTimeBehavior\=convertToNull
-
-#zeroDateTimeBehavior=convertToNull
-#sql.username = root
-#sql.password = rootadmin
-
+sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull
+sql.username = sysdba
+sql.password = Bccd@2017
 
 # \u521d\u59cb\u5927\u5c0f\u3001\u6700\u5c0f\u751f\u5b58\u3001\u6700\u5927\u6fc0\u6d3b\u6570\u91cf
 sql.initialSize = 10
@@ -41,7 +31,7 @@ sql.testOnReturn = false
 mongo.replicaSet = 120.76.221.250:27017
 mongo.dbName = pmph
 mongo.username = admin
-mongo.password = What's#our00psW@admin
+mongo.password = BcIT\=2018
 # \u4e3b\u673a\u7684\u8fde\u63a5\u6c60\u5927\u5c0f
 mongo.connectionsPerHost = 8
 mongo.threadsAllowedToBlockForConnectionMultiplier = 4
