--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [%c] %
 
 log4j.appender.ServerDailyRollingFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ServerDailyRollingFile.DatePattern='.'yyyy-MM-dd'.log'
-log4j.appender.ServerDailyRollingFile.File=server_daily.log
+log4j.appender.ServerDailyRollingFile.File=server_daily
 log4j.appender.ServerDailyRollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.ServerDailyRollingFile.layout.ConversionPattern=%d - %m%n
 log4j.appender.ServerDailyRollingFile.Append=true
