--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,8 @@
         <mongodb.ver>1.10.4.RELEASE</mongodb.ver>
         <!--zip4j-->
         <zip4j.ver>1.3.2</zip4j.ver>
+        <!--poi-->
+        <poi.ver>3.17</poi.ver>
     </properties>
     
     <dependencies>
@@ -219,6 +221,11 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>${commons-codec.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.ver}</version>
         </dependency>
     </dependencies>
 
