--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -7,13 +7,15 @@
 # \u8fde\u63a5\u5c5e\u6027
 sql.driverClassName = com.mysql.jdbc.Driver
 
- sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
- sql.username = sysdba
- sql.password = Bccd@2017
+#sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+#sql.username = sysdba
+#sql.password = Bccd@2017
+ 
+sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+sql.username = root
+sql.password = root
 
-#sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull
-#sql.username = gugia
-#sql.password = 123123
+
 
 
 # \u521d\u59cb\u5927\u5c0f\u3001\u6700\u5c0f\u751f\u5b58\u3001\u6700\u5927\u6fc0\u6d3b\u6570\u91cf
