--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,8 @@
 		<poi.ver>3.17</poi.ver>
 		<!--ueditor -->
 		<ueditor.ver>1.1.2-edit-1.0</ueditor.ver>
+		<!-- quartz -->
+		<quartz.ver>2.2.3</quartz.ver>
 	</properties>
 
 	<dependencies>
@@ -133,6 +135,11 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>${springframework.ver}</version>
 		</dependency>
+		<dependency>
+	      <groupId>org.quartz-scheduler</groupId>
+	      <artifactId>quartz</artifactId>
+	      <version>${quartz.ver}</version>
+    	</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
