--- a/pom.xml
+++ b/pom.xml
@@ -136,10 +136,10 @@
 			<version>${springframework.ver}</version>
 		</dependency>
 		<dependency>
-	      <groupId>org.quartz-scheduler</groupId>
-	      <artifactId>quartz</artifactId>
-	      <version>${quartz.ver}</version>
-    	</dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>${quartz.ver}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -149,6 +149,11 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>${mybatis-spring.ver}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>sqljdbc4</artifactId>
+			<version>4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
