属性文件调整，取消sql日志

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,12 +14,12 @@ log4j.appender.ServerDailyRollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.ServerDailyRollingFile.layout.ConversionPattern=%d - %m%n
 log4j.appender.ServerDailyRollingFile.Append=true
 
-log4j.logger.com.bc.pmpheep.back.dao=TRACE
-log4j.logger.java.sql.ResultSet=INFO
-log4j.logger.org.apache=INFO
-log4j.logger.java.sql.Connection=INFO
-log4j.logger.java.sql.Statement=INFO
-log4j.logger.java.sql.PreparedStatement=INFO
+#log4j.logger.com.bc.pmpheep.back.dao=TRACE
+#log4j.logger.java.sql.ResultSet=INFO
+#log4j.logger.org.apache=INFO
+#log4j.logger.java.sql.Connection=INFO
+#log4j.logger.java.sql.Statement=INFO
+#log4j.logger.java.sql.PreparedStatement=INFO
 
 #log4j.appender.ACT=org.apache.log4j.ConsoleAppender
 #log4j.appender.ACT.layout=org.apache.log4j.PatternLayout
