--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -7,7 +7,7 @@
 # \u8fde\u63a5\u5c5e\u6027 
 sql.driverClassName = com.mysql.jdbc.Driver
 
-sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 sql.username = sysdba
 sql.password = Bccd@2017
  
@@ -40,7 +40,7 @@ mongo.password = BcIT\=2018
 # \u4e3b\u673a\u7684\u8fde\u63a5\u6c60\u5927\u5c0f
 mongo.connectionsPerHost = 8
 mongo.threadsAllowedToBlockForConnectionMultiplier = 4
-mongo.connectTimeout = 100000
+mongo.connectTimeout = 10000
 mongo.maxWaitTime = 150000
 mongo.autoConnectRetry = true
 mongo.socketKeepAlive = true
