--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -7,7 +7,7 @@
 # \u8fde\u63a5\u5c5e\u6027 
 sql.driverClassName = com.mysql.jdbc.Driver
 
-sql.url = jdbc:mysql:120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 sql.username = sysdba
 sql.password = bccd@2017
 
