--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -9,7 +9,7 @@ sql.driverClassName = com.mysql.jdbc.Driver
 
 sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 sql.username = sysdba
-sql.password = bccd@2017
+sql.password = Bccd@2017
 
 # \u521d\u59cb\u5927\u5c0f\u3001\u6700\u5c0f\u751f\u5b58\u3001\u6700\u5927\u6fc0\u6d3b\u6570\u91cf
 sql.initialSize = 10
