--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -7,14 +7,14 @@
 # \u8fde\u63a5\u5c5e\u6027 
 sql.driverClassName = com.mysql.jdbc.Driver
 
-sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-sql.username = sysdba
-sql.password = Bccd@2017
+#sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+#sql.username = sysdba
+#sql.password = Bccd@2017
 
  
-#sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-#sql.username = root
-#sql.password = root
+sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+sql.username = root
+sql.password = root
 
 
 
@@ -36,18 +36,24 @@ sql.testOnBorrow = false
 sql.testOnReturn = false
 
 # ----------------- MongoDB -----------------
-mongo.replicaSet = 120.76.221.250:27017
+#mongo.replicaSet = 120.76.221.250:27017
+#mongo.dbName = pmph
+#mongo.authenticationDbname = admin
+#mongo.username = admin
+#mongo.password = BcIT\=2018
+mongo.replicaSet = 127.0.0.1:27017
 mongo.dbName = pmph
-mongo.username = admin
-mongo.password = BcIT\=2018
+mongo.authenticationDbname = pmph
+mongo.username = pmph
+mongo.password = 123456
 # \u4e3b\u673a\u7684\u8fde\u63a5\u6c60\u5927\u5c0f
 mongo.connectionsPerHost = 8
 mongo.threadsAllowedToBlockForConnectionMultiplier = 4
-mongo.connectTimeout = 10000
-mongo.maxWaitTime = 150000
+mongo.connectTimeout = 100000
+mongo.maxWaitTime = 1500000
 mongo.autoConnectRetry = true
 mongo.socketKeepAlive = true
-mongo.socketTimeout = 150000
+mongo.socketTimeout = 1500000
 # \u4ece\u8282\u70b9\u5e94\u7b54
 mongo.slaveOk = true
 mongo.writeNumber = 1
