--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -8,13 +8,13 @@
 sql.driverClassName = com.mysql.jdbc.Driver
 
 
-sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-sql.username = sysdba
-sql.password = Bccd@2017
+#sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+#sql.username = sysdba
+#sql.password = Bccd@2017
 
-#sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-#sql.username = root
-#sql.password = root
+sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+sql.username = root
+sql.password = root
 
 
 #sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
@@ -39,17 +39,17 @@ sql.testOnBorrow = false
 sql.testOnReturn = false
 
 # ----------------- MongoDB -----------------
-mongo.replicaSet = 120.76.221.250:27017
-mongo.dbName = pmph
-mongo.authenticationDbname = admin
-mongo.username = admin
-mongo.password = BcIT\=2018
-
-#mongo.replicaSet = 127.0.0.1:27017
+#mongo.replicaSet = 120.76.221.250:27017
 #mongo.dbName = pmph
-#mongo.authenticationDbname = pmph
-#mongo.username = pmph
-#mongo.password = 123456
+#mongo.authenticationDbname = admin
+#mongo.username = admin
+#mongo.password = BcIT\=2018
+
+mongo.replicaSet = 127.0.0.1:27017
+mongo.dbName = pmph
+mongo.authenticationDbname = pmph
+mongo.username = pmph
+mongo.password = 123456
 
 # \u4e3b\u673a\u7684\u8fde\u63a5\u6c60\u5927\u5c0f
 mongo.connectionsPerHost = 8
