--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -40,7 +40,7 @@ sql.testOnReturn = false
 #mongo.password = BcIT\=2018
 mongo.replicaSet = 127.0.0.1:27017
 mongo.dbName = pmph
-mongo.authenticationDbname = pmph
+mongo.authenticationDbname = admin
 mongo.username = pmph
 mongo.password = 123456
 
