--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -41,8 +41,8 @@ sql.testOnReturn = false
 mongo.replicaSet = 127.0.0.1:27017
 mongo.dbName = pmph
 mongo.authenticationDbname = admin
-mongo.username = pmph
-mongo.password = 123456
+mongo.username = admin
+mongo.password = BcIT\=2018
 
 # \u4e3b\u673a\u7684\u8fde\u63a5\u6c60\u5927\u5c0f
 mongo.connectionsPerHost = 8
