--- a/pom.xml
+++ b/pom.xml
@@ -332,6 +332,7 @@
                     <target>${maven-source.ver}</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
+                        <extdirs>${project.basedir}/src/main/webapp/WEB-INF/lib</extdirs>
                     </compilerArguments>
                 </configuration>
             </plugin>
