系统消息发送给教材申报者代码优化

--- a/pom.xml
+++ b/pom.xml
@@ -332,7 +332,7 @@
                     <target>${maven-source.ver}</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
-                        <extdirs>src\main\webapp\WEB-INF\lib</extdirs>
+                        <extdirs>${project.basedir}/src/main/webapp/WEB-INF/lib</extdirs>
                     </compilerArguments>
                 </configuration>
             </plugin>
