添加WebCollector爬虫依赖

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,8 @@
         <httpcore.ver>4.4.1</httpcore.ver>
         <fastjson.ver>1.2.7</fastjson.ver>
         <bcprov-jdk16.ver>1.46</bcprov-jdk16.ver>
+        <!-- WebCollector爬虫 -->
+        <WebCollector.ver>2.52</WebCollector.ver>
     </properties>
 	
     <dependencies>
@@ -306,6 +308,12 @@
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk16</artifactId>
 			<version>${bcprov-jdk16.ver}</version>
+		</dependency>
+		<!-- WebCollector爬虫 -->
+		<dependency>
+		    <groupId>cn.edu.hfut.dmic.webcollector</groupId>
+		    <artifactId>WebCollector</artifactId>
+		    <version>${WebCollector.ver}</version>
 		</dependency>
 		
     </dependencies>
