--- a/pom.xml
+++ b/pom.xml
@@ -307,7 +307,11 @@
 			<artifactId>bcprov-jdk16</artifactId>
 			<version>${bcprov-jdk16.ver}</version>
 		</dependency>
-		
+		<dependency>
+    		<groupId>cn.edu.hfut.dmic.webcollector</groupId>
+    		<artifactId>WebCollector</artifactId>
+    		<version>2.52</version>
+		</dependency>
     </dependencies>
 
     <repositories>
