--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,8 +23,12 @@
     </servlet-mapping>
     
     <!--允许跨域-->
+    <filter>  
+        <filter-name>corsFilter</filter-name>  
+        <filter-class>com.bc.pmpheep.filter.CORSFilter</filter-class>  
+    </filter>
     <filter-mapping>
-        <filter-name>CorsFilter</filter-name>
+        <filter-name>corsFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
