--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <version>${javaee-web-api.ver}</version>
             <scope>provided</scope>
         </dependency>
+           <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
