--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,8 @@
         <WebCollector.ver>2.71</WebCollector.ver>
         <!-- xstream -->        
         <xstream.ver>1.3.1</xstream.ver>
+        <!--RxJava2-->
+        <retrofit.ver>2.3.0</retrofit.ver>
     </properties>
 	
     <dependencies>
@@ -331,6 +333,16 @@
             <groupId>com.rws.3rd</groupId>
             <artifactId>sso</artifactId>
             <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>${retrofit.ver}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-gson</artifactId>
+            <version>${retrofit.ver}</version>
         </dependency>
     </dependencies>
 
