--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -2,9 +2,11 @@
 # Licensed under the Apache License 2.0.
 
 #\u8bf7\u52ff\u968f\u610f\u66f4\u6539 - \u7f57\u65ed 2017-09-19
-#sso.url = http://sso.ipmph.com/ 
-
+#sso.url = http://sso.ipmph.com/
 sso.url = http://books123456789.ipmph.com/newsso/
+
+#login2front.url = http://119.254.226.115/medu/innerlogin.action
+login2front.url = http://120.76.221.250/pmeph/innerlogin.action
 
 # ----------------- MySQL -----------------
 # \u8fde\u63a5\u5c5e\u6027 
