--- a/src/main/webapp/ueditor/jsp/config.json
+++ b/src/main/webapp/ueditor/jsp/config.json
@@ -6,6 +6,6 @@
     "imageCompressEnable": true,
     "imageCompressBorder": 1600,
     "imageInsertAlign": "none", 
-    "imageUrlPrefix": "http://39.107.80.79/pmpheep",
+    "imageUrlPrefix": "/pmpheep",
     "imagePathFormat": "/ueditor/jsp/upload/image/{yyyy}{mm}{dd}/{time}{rand:6}"
 }
