--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -2,9 +2,9 @@
 # \u90AE\u4EF6\u670D\u52A1\u7684\u914D\u7F6E
 #------------------------------------------------------------
 #\u670D\u52A1\u5668
-mail.smtp.host=smtp.sina.com
+mail.smtp.host=smtp.163.com
 #\u7AEF\u53E3\u53F7
-mail.smtp.port=25
+mail.smtp.port=465
 #\u662F\u5426\u9700\u8981\u9A8C\u8BC1\u5BC6\u7801
 mail.smtp.auth=true
 #\u8D85\u65F6\u65F6\u95F4
@@ -13,6 +13,7 @@ mail.smtp.timeout=30000
 #\u7528\u6237\u540D\u5BC6\u7801
 #------------------------------------------------------------
 #\u767B\u9646\u7528\u6237\u540D
-mail.smtp.username=sccdbc@sina.com
+#mail.smtp.username=sccdbc@sina.com
+mail.smtp.username=scbcxx@163.com
 #\u5BC6\u7801
-mail.smtp.password=sccdbc
+mail.smtp.password=39:19:61:7A:CE:8C:2F:A4:FA:82:6B:6D:CE:34:8D:2C
