问卷调查，发送邮件代码优化

--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -9,6 +9,9 @@ mail.smtp.port=465
 mail.smtp.auth=true
 #\u8D85\u65F6\u65F6\u95F4
 mail.smtp.timeout=30000
+#\u4F7F\u7528SSL\u534F\u8BAE
+mail.smtp.ssl.enable=true
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 #------------------------------------------------------------
 #\u7528\u6237\u540D\u5BC6\u7801
 #------------------------------------------------------------
@@ -16,4 +19,4 @@ mail.smtp.timeout=30000
 #mail.smtp.username=sccdbc@sina.com
 mail.smtp.username=scbcxx@163.com
 #\u5BC6\u7801
-mail.smtp.password=39:19:61:7A:CE:8C:2F:A4:FA:82:6B:6D:CE:34:8D:2C
+mail.smtp.password=39\:19\:61\:7A\:CE\:8C\:2F\:A4\:FA\:82\:6B\:6D\:CE\:34\:8D\:2C
