--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -2,16 +2,16 @@
 # Licensed under the Apache License 2.0.
 
 #\u8bf7\u52ff\u968f\u610f\u66f4\u6539 - \u7f57\u65ed 2017-09-19
-#sso.url = http://sso.ipmph.com/
-sso.url = http://books123456789.ipmph.com/newsso/
+sso.url = http://sso.ipmph.com/
+#sso.url = http://books123456789.ipmph.com/newsso/
 
 #login2front.url = http://119.254.226.115/medu/innerlogin.action
-login2front.url = http://120.76.221.250/pmeph/innerlogin.action
+login2front.url = http://medu.ipmph.com/innerlogin.action
 
 # ----------------- MySQL -----------------
 # \u8fde\u63a5\u5c5e\u6027 
 sql.driverClassName = com.mysql.jdbc.Driver
-sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+sql.url = jdbc:mysql://192.168.100.138:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 sql.username = sysdba
 sql.password = Bccd@2017
 
@@ -33,7 +33,7 @@ sql.testOnBorrow = false
 sql.testOnReturn = false
 
 # ----------------- MongoDB -----------------
-mongo.replicaSet = 120.76.221.250:27017
+mongo.replicaSet = 192.168.100.138:27017
 mongo.dbName = pmph
 mongo.authenticationDbname = admin
 mongo.username = admin
