--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -5,20 +5,20 @@
 #sso.url = http://sso.ipmph.com/
 sso.url = http://books123456789.ipmph.com/newsso/
 
-#login2front.url = http://119.254.226.115/medu/innerlogin.action
-login2front.url = http://120.76.221.250/pmeph/innerlogin.action
+login2front.url = http://119.254.226.115/medu/innerlogin.action
+#login2front.url = http://120.76.221.250/pmeph/innerlogin.action
 
 # ----------------- MySQL -----------------
 # \u8fde\u63a5\u5c5e\u6027 
 sql.driverClassName = com.mysql.jdbc.Driver
 
-sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-sql.username = sysdba
-sql.password = Bccd@2017
+#sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+#sql.username = sysdba
+#sql.password = Bccd@2017
 
-#sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-#sql.username = root
-#sql.password = bcit2017\=pmph
+sql.url = jdbc:mysql://127.0.0.1:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+sql.username = root
+sql.password = bcit2017\=pmph
 
 # \u521d\u59cb\u5927\u5c0f\u3001\u6700\u5c0f\u751f\u5b58\u3001\u6700\u5927\u6fc0\u6d3b\u6570\u91cf
 sql.initialSize = 10
