--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -5,19 +5,19 @@
 #sso.url = http://sso.ipmph.com/
 sso.url = http://books123456789.ipmph.com/newsso/
 
-#login2front.url = http://119.254.226.115/medu/innerlogin.action
-login2front.url = http://120.76.221.250/pmeph/innerlogin.action
+login2front.url = http://119.254.226.115/medu/innerlogin.action
+#login2front.url = http://120.76.221.250/pmeph/innerlogin.action
 
 # ----------------- MySQL -----------------
 # \u8fde\u63a5\u5c5e\u6027 
 sql.driverClassName = com.mysql.jdbc.Driver
 
-sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-sql.username = sysdba
-sql.password = Bccd@2017
-#sql.url = jdbc:mysql://39.107.80.79:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
-#sql.username = root
-#sql.password = bcit2017\=pmph
+#sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+#sql.username = sysdba
+#sql.password = Bccd@2017
+sql.url = jdbc:mysql://39.107.80.79:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+sql.username = root
+sql.password = bcit2017\=pmph
 #sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 #sql.username = root
 #sql.password = bcit2017\=pmph
@@ -40,16 +40,16 @@ sql.testOnBorrow = false
 sql.testOnReturn = false
 
 # ----------------- MongoDB -----------------
-#mongo.replicaSet = 120.76.221.250:27017
-#mongo.dbName = pmph
-#mongo.authenticationDbname = admin
-#mongo.username = admin
-#mongo.password = BcIT\=2018
-mongo.replicaSet = 127.0.0.1:27017
+mongo.replicaSet = 39.107.80.79:27017
 mongo.dbName = pmph
 mongo.authenticationDbname = admin
 mongo.username = admin
 mongo.password = BcIT\=2018
+#mongo.replicaSet = 127.0.0.1:27017
+#mongo.dbName = pmph
+#mongo.authenticationDbname = admin
+#mongo.username = admin
+#mongo.password = BcIT\=2018
 
 # \u4e3b\u673a\u7684\u8fde\u63a5\u6c60\u5927\u5c0f
 mongo.connectionsPerHost = 8
