--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -5,7 +5,7 @@
 #sso.url = http://sso.ipmph.com/
 sso.url = http://books123456789.ipmph.com/newsso/
 
-login2front.url = http://39.107.80.79/medu/innerlogin.action
+login2front.url = http://119./medu/innerlogin.action
 #login2front.url = http://120.76.221.250/pmeph/innerlogin.action
 
 # ----------------- MySQL -----------------
@@ -16,7 +16,7 @@ sql.driverClassName = com.mysql.jdbc.Driver
 #sql.username = sysdba
 #sql.password = Bccd@2017
 
-sql.url = jdbc:mysql://39.107.80.79:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+sql.url = jdbc:mysql://119.254.226.115:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 sql.username = root
 sql.password = bcit2017\=pmph
 
@@ -42,7 +42,7 @@ sql.testOnBorrow = false
 sql.testOnReturn = false
 
 # ----------------- MongoDB -----------------
-mongo.replicaSet = 39.107.80.79:27017
+mongo.replicaSet = 119.254.226.115:27017
 mongo.dbName = pmph
 mongo.authenticationDbname = admin
 mongo.username = admin
