数据库密码修改

--- a/src/main/resources/spring/spring.properties
+++ b/src/main/resources/spring/spring.properties
@@ -13,7 +13,7 @@ login2front.url = http://medu.ipmph.com/innerlogin.action
 sql.driverClassName = com.mysql.jdbc.Driver
 sql.url = jdbc:mysql://192.168.100.138:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 sql.username = sysdba
-sql.password = showme255moneY
+sql.password = rwej_xmzssjk_2018
 
 
 #sql.url = jdbc:mysql://120.76.221.250:3306/pmph_imesp_db?zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
